--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
+    "howler": "^2.2.4",
     "lucide-react": "^0.475.0",
+    "lyrics-finder": "^21.7.0",
+    "music-metadata-browser": "^2.5.11",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
@@ -51,6 +54,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "spotify-web-api-js": "^1.5.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
